--- a/valentines.html
+++ b/valentines.html
@@ -9,14 +9,14 @@
 <body>
     <div id="background-container"></div>
     <div id="secret-container">
-        <h1>You discovered a secret! 💖</h1>
+        <h1>You discovered a secret!</h1>
         <button id="reveal-btn">Click to Reveal</button>
     </div>
     <div id="video-container" style="display: none;">
-        <h1>For Someone Special ❤️</h1>
+        <h1>For Someone</h1>
         <div class="video-wrapper">
             <video controls>
-                <source src="Scrisoare.mp4" type="video/mp4">
+                <source src="NoVideo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
